@@ -27,6 +27,7 @@ stc -list-keys \
 stc -hint _PublicKey_ \
 stc -mux _accountID_ _uint64_ \
 stc -demux _muxedAccount_ \
+stc -payload _PublicKey_ \
 stc -pack-payload _PublicKey_ _hex-payload_ \
 stc -unpack-payload _payload-signer_ \
 stc -opid _muxedAccount_ _sequenceNumber_ _operationIndex_
@@ -62,7 +63,8 @@ argument is "`-`".  By default, stc outputs transactions in the
 human-readable _txrep_ format, specified by SEP-0011.  With the `-c`
 flag, stc outputs base64-encoded binary XDR format.  Various options
 modify the transaction as it is being processed, notably `-sign`,
-`-key` (which implies `-sign`), and `-u`.
+`-key` (which implies `-sign`), `-payload` (which implies `-sign`) and
+`-u`.
 
 Txrep format is automatically derived from the XDR specification of
 `TransactionEnvelope`, with just a few special-cased types.  The
@@ -334,6 +336,22 @@ send the transaction to standard output unless `-i` has been
 supplied.  `-i` and `-o` are mutually exclusive, and can only be used
 in default mode.
 
+`-pack-payload` _hex-payload_ _public-key_
+:	Create an Ed25519 signed payload signer key (starting `P...`),
+usually for including as one of the `extraSigners` in a transaction's
+preconditions.
+
+`-payload` _hex-payload_
+:	The payload option, which implies `-sign`, specifies a hexadecimal
+payload to sign instead of the current transaction's txhash.
+Typically, this would be used when a payload signer in the
+`extraSigners` precondition of a transaction requires a transaction to
+include a signature for a different transaction in order to be valid.
+A payload and public key can be packed together into a payload signer
+or unpacked with the `-pack-payload` and `-unpack-payload`.  For
+safety, you would generally want to compute the _hex-payload_ by using
+the `-txhash` option on a different transaction you have validated.
+
 `-post`
 :	Submit the transaction to the network.
 
@@ -375,6 +393,10 @@ specified.
 depends on the number of operations, so be sure to re-run this if you
 change the number of transactions.  Only available in default mode.
 
+`-unpack-payload` _payload-signer_
+:	Extracts the public key and payload from a payload signer starting
+`P...`.
+
 `-v`
 :	Produce more verbose output for the query options.
 
@@ -398,6 +420,20 @@ until the editor quits without making any changes.
 :	Reads a transaction in file `trans`, signs it using key `mykey`,
 then overwrite the `trans` file with the signed transaction in base64
 format.  The original unsigned transaction is backed up in `trans~`.
+
+`stc -pack-payload $(stc -pub mykey) $(stc -txhash trans1)`
+:	Create a "signed payload" signer requiring a signature by key
+`mykey` on transaction `trans1`.  This signer can be required by other
+transactions that should not be executed without disclosing a
+signature on `trans1`.
+
+`stc -i -key mykey -payload $(stc -txhash trans1) trans2`
+:	Adds a signature for transaction `trans1` to transaction `trans2`.
+(For this to make sense, `trans1` should require a corresponding
+payload signer, as might be generated by the previous example.)  Note
+that payload signers have different hints from regular signers, so
+that `stc -i -key mykey -payload $(stc -txhash trans1) trans1` will
+not have the same effect as `stc -i -key mykey trans1`.
 
 `stc -post trans`
 :	Posts a transaction in file `trans` to the network.  The
@@ -439,9 +475,9 @@ Here string private key
 	creates a transaction from standard input and signs it using a key
 that has been directly specified using bash's "here string" syntax.
 Note that there is no way to pass a raw private key on the command
-line, because command-line arguments are visible to other users would
-thus leak the secret.  On the other hand, using a here string to pass
-the private key as file descriptor 3 is safe.
+line, because command-line arguments are visible to other users and
+would thus leak the secret.  On the other hand, using a here string to
+pass the private key as file descriptor 3 is safe.
 
 # ENVIRONMENT
 
